2009-03-19  Lars Hartmann  <lars (at) chaotika (dot) org>

	Renamed tests:
	* test/02_lpxpak_parse.c: renamed to test/03_lpxpak.c.
	* test/02_lpxpak_parse.tbz2: renamed to test/03_lpxpak.tbz2.
	* test/01_lpatom_parse.c: renamed to test/02_lpatom_parse.c.
	* test/01_lpatom_parse.txt: renamed to test/02_lpatom_parse.txt.

	* src/liblputil.c (lputil_splitstr): rewritten with strstr instead
	of strtok.

	* test/01_lpatom_parse.c (main): fixed identing.

2009-03-18  Lars Hartmann  <lars (at) chaotika (dot) org>

	* include/util.h: removed lputil_strndup.
	* src/liblputil.c: removed lputil_strndup.

2009-03-17  Lars Hartmann  <lars (at) chaotika (dot) org>

	Added replacement function for strndup:
	* replace/strndup.c: added.
	* replace/Makefile.am: added.
	* configure.ac: added replacement-test for strndup
	* Makefile.am (SUBDIRS): added path to replacement lib.
	* src/Makefile.am (libportage_la_LIBADD): added replacement lib.

	Cleaned up Build Framework:
	* Makefile.am (SUBDIRS): renamed t to test
	* configure.ac (AC_CONFIG_AUX_DIR): changed to put most config
	files into config/.
	(AC_CONFIG_FILES): renamed t to test.
	removed unnecessary header checks.
	* t: renamed to test.
	* acinclude.m4: set default DOXYGEN settings.

2009-03-16  Lars Hartmann  <lars (at) chaotika (dot) org>

	Added some files to the distribution:
	* Makefile.am (EXTRA_DIST): added doxygen.cfg.
	* doc/Makefile.am (EXTRA_DIST): added xpak.txt.

	Added Doxygen support to build framework:
	* Makefile.am: included aminclude.am.
	* doc/doxygen/api-doc: moved to doxygen.cfg.
	* doxygen.cfg: replaced constants with DX_ macros.
	* configure.ac: added DX_ macros.
	* acinclude.m4: added.
	* aminclude.am: added.

	* configure.ac: small format fix.

	* doc/.gitignore: added.

	* doc/Requirements.txt: updated Requirements.

	Updated preprocessor macros:
	* src/liblpatom.c: updated formatting of preprocessor macros.
	* include/common.h: updated formatting of preprocessor macros.
